--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
 
   <h1>Welcome to Oman</h1>
+  
 </section>
-
+ <div class="scroll-text">Scroll</div>
 <section class="cards-section">
   <h2>About Oman</h2>
   <div class="card-container">
