--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   <h2>About Oman</h2>
   <div class="card-container">
     <div class="card">
+       <figure>
       <img src="pictures /history cardpexels-christine cleireny-19840387.jpg" alt="picture by Christine Cleireny">
+         <figcaption>picture by Christine Cleireny</figcaption>
+         </figure>
       <h3>History</h3>
       <p>Explore old architecturs and landscapes.</p>
       <a class="card-cta" href="history.html">Read</a>
