--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@
       <a class="card-cta" href="history.html">Read</a>
     </div>
     <div class="card">
+        <figure>
       <img src="pictures /pexels-beytlik-7522157.jpg" alt="picture by Beytlik Photography">
+            <figcaption>picture by Beytlik Photography</figcaption>
+        </figure>
       <h3>Culture</h3>
       <p>Discover Oman's culture.</p>
       <a class="card-cta" href="culture.html">Read</a>
     </div>
     <div class="card">
+        <figure>
       <img src="pictures /landscapescradpexels-ahmed-al-khamisi-2531057-9674297.jpg" alt="picture by Ahmed Al-Khamisi">
+             <figcaption>picture by Ahmed Al-Khamisi</figcaption>
+        </figure>
       <h3>Geography</h3>
       <p>Experience the Oman's nature.</p>
        <a class="card-cta" href="geography.html">Read</a>
