--- a/culture.html
+++ b/culture.html
@@ -50,6 +50,7 @@
     </div>
 
     <figure class="image-column">
+         <figcaption> <p>picture by Kenza Benaouda </p></figcaption>
       <img 
         class="single-image" 
         src="pictures /pexels-kenza-benaouda-29106256-35112608.jpg" 
