--- a/geography.html
+++ b/geography.html
@@ -46,6 +46,7 @@
   <!-- Section 1 — Intro -->
 <section class="two-column-section">
   <figure class="image-column-left">
+	    <figcaption> <p>picture by Reyyan</p></figcaption>
     <img class="single-image" src="pictures /pexels-reyyan-505450018-31254200.jpg" alt="picture by reyyan">
     <figcaption class="single-image-caption">
       From desert dunes to coastlines — Oman’s varied landscapes.
@@ -66,6 +67,7 @@
   </div>
 
   <figure class="image-column">
+	  <figcaption> <p>picture by eslames1</p></figcaption>
     <img class="single-image" src="pictures /pexels-eslames1-34919507.jpg" alt="picture by eslames1">
     <figcaption class="single-image-caption">The rugged Hajar Mountains shape northern Oman’s climate and culture.</figcaption>
   </figure>
@@ -74,6 +76,7 @@
 <!-- Section 3 — Deserts & Wadis -->
 <section class="two-column-section">
   <figure class="image-column-left">
+	    <figcaption> <p>picture by Reyyan</p></figcaption>
     <img class="single-image" src="pictures /pexels-reyyan-505450018-30785939.jpg" alt="picture by reyyan">
     <figcaption class="single-image-caption">
       The golden dunes of Wahiba Sands in central Oman.
