Update about .html

--- a/about .html
+++ b/about .html
@@ -56,6 +56,7 @@
     <figure class="image-column">
       <img
         class="single-image"
+         <figcaption> <p>Picture by Saad Alawi</p></figcaption>
         src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
         alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
       <figcaption class="single-image-caption">
@@ -70,6 +71,7 @@
     <figure class="image-column-left">
       <img
         class="single-image"
+         <figcaption> <p>picture by Sudhakaran Puthiyedath</p></figcaption>
         src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
         alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
       <figcaption class="single-image-caption">
