--- a/about .html
+++ b/about .html
@@ -57,7 +57,7 @@
       <img
         class="single-image"
          <figcaption> <p>Picture by Saad Alawi</p></figcaption>
-        src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
+        <src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
         alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
       <figcaption class="single-image-caption">
         Exploring Oman through culture, geography, and travel experiences.
@@ -69,10 +69,10 @@
   <!-- Section 2 — Design & Learning Goals -->
   <section class="two-column-section">
     <figure class="image-column-left">
-      <img
-        class="single-image"
+      
+        <figure class="single-image"
          <figcaption> <p>picture by Sudhakaran Puthiyedath</p></figcaption>
-        src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
+        <img src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
         alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
       <figcaption class="single-image-caption">
         Natural landscapes that influenced the site’s visual direction.
