Update about .html

--- a/about .html
+++ b/about .html
@@ -52,12 +52,10 @@
         Oman was chosen as the focus due to its rich culture, diverse geography, and growing appeal as a travel destination. The site is designed to inform and inspire travelers while presenting content in a clear, modern, and engaging way.
       </p>
     </div>
-
+<section class="single-image"
     <figure class="image-column">
-      <img
-        class="single-image"
-         <figcaption> <p>Picture by Saad Alawi</p></figcaption>
-        <src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
+      <figcaption> <p>Picture by Saad Alawi</p></figcaption>
+          <img class="single-image"src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
         alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
       <figcaption class="single-image-caption">
         Exploring Oman through culture, geography, and travel experiences.
@@ -69,9 +67,9 @@
   <!-- Section 2 — Design & Learning Goals -->
   <section class="two-column-section">
     <figure class="image-column-left">
-      
-        <figure class="single-image"
-         <figcaption> <p>picture by Sudhakaran Puthiyedath</p></figcaption>
+       <figcaption> <p>picture by Sudhakaran Puthiyedath</p></figcaption>
+      <figure class="single-image"
+         
         <img src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
         alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
       <figcaption class="single-image-caption">
