Update about .html

--- a/about .html
+++ b/about .html
@@ -54,13 +54,17 @@
     </div>
     <figcaption> <p>Picture by Saad Alawi</p></figcaption>
 <section class="single-image"
- <figure class="image-column">
-       <img class="single-image"src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
+<figure class="image-column">
+      <img
+        class="single-image"
+        src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
         alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
       <figcaption class="single-image-caption">
         Exploring Oman through culture, geography, and travel experiences.
       </figcaption>
     </figure>
+    
+
     
   </section>
 <div class="scroll-text">Scroll </div>
