Update about .html

--- a/about .html
+++ b/about .html
@@ -54,15 +54,19 @@
     </div>
 
     <figure class="image-column">
-      <img
-        class="single-image"
-        src="pictures/pexels-saad-alawi-123396395-29285014.jpg"
-        alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
-      <figcaption class="single-image-caption">
-        Exploring Oman through culture, geography, and travel experiences.
-      </figcaption>
-    </figure>
-    
+  <img
+    class="single-image"
+    src="pictures/pexels-saad-alawi-123396395-29285014.jpg"
+    alt="Collage of Oman's culture, geography, and travel scenes">
+
+  <figcaption class="image-caption">
+    <span class="photo-credit">Photo by Saad Alawi</span>
+    <span class="caption-text">
+      Exploring Oman through culture, geography, and travel experiences.
+    </span>
+  </figcaption>
+</figure>
+
   </section>
 <div class="scroll-text">Scroll </div>
   <!-- Section 2 — Design & Learning Goals -->
