Update about .html

--- a/about .html
+++ b/about .html
@@ -53,19 +53,15 @@
       </p>
     </div>
 
-    <figure class="image-column">
-  <img
-    class="single-image"
-    src="pictures/pexels-saad-alawi-123396395-29285014.jpg"
-    alt="Collage of Oman's culture, geography, and travel scenes">
-
-  <figcaption class="image-caption">
-    <span class="photo-credit">Photo by Saad Alawi</span>
-    <span class="caption-text">
-      Exploring Oman through culture, geography, and travel experiences.
-    </span>
-  </figcaption>
-</figure>
+  <figure class="image-column">
+      <img
+        class="single-image"
+        src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
+        alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
+      <figcaption class="single-image-caption">
+        Exploring Oman through culture, geography, and travel experiences.
+      </figcaption>
+    </figure>
 
   </section>
 <div class="scroll-text">Scroll </div>
@@ -74,7 +70,7 @@
     <figure class="image-column-left">
       <img
         class="single-image"
-        src="pictures/pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
+        src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
         alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
       <figcaption class="single-image-caption">
         Natural landscapes that influenced the site’s visual direction.
