Update about .html

--- a/about .html
+++ b/about .html
@@ -54,6 +54,7 @@
     </div>
 
     <figure class="image-column">
+        <figcaption> <p>Picture by Saad Alawi</p></figcaption>
       <img
         class="single-image"
         src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
