--- a/about .html
+++ b/about .html
@@ -69,6 +69,7 @@
   <!-- Section 2 — Design & Learning Goals -->
   <section class="two-column-section">
     <figure class="image-column-left">
+       <figcaption> <p>picture by Sudhakaran Puthiyedath</p></figcaption>
       <img
         class="single-image"
         src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
