--- a/thingstodo.html
+++ b/thingstodo.html
@@ -43,6 +43,7 @@
 <main class="page-main">
   <section class="two-column-section">
     <figure class="image-column-left">
+       <figcaption> <p>picture by Ema Mohammed</p></figcaption>
       <img class="square-image" src="pictures /pexels-ema-mohammed-1617422-3101780.jpg" alt="picture by Ema Mohammed">
       <figcaption class="square-image-caption">Explore Oman's top attractions and activities.</figcaption>
     </figure>
@@ -62,6 +63,7 @@
       <p>Attend local festivals, taste traditional cuisine at family-run restaurants, and learn about centuries-old crafts. These experiences offer deeper insights into Oman's rich cultural heritage and the values that define its people.</p>
     </div>
     <figure class="image-column">
+        <figcaption> <p>picture by Mihir</p></figcaption>
       <img class="single-image" src="pictures /pexels-mihirs1970-33516570.jpg" alt="picture by Mihir S1970">
       <figcaption class="single-image-caption">Experience authentic Omani traditions and hospitality.</figcaption>
     </figure>
