--- a/history.html
+++ b/history.html
@@ -46,6 +46,7 @@
   <!-- Section 1 — Intro -->
   <section class="two-column-section">
     <figure class="image-column-left">
+		 <figcaption> <p>picure by Reyyan</p></figcaption>
       <img class="single-image" src="pictures /history1pexels-reyyan-505450018-30785924.jpg" alt="picures by reyyan	">
       <figcaption class="single-image-caption">
         Stunning Fort Architecture in Oman
@@ -66,6 +67,7 @@
     </div>
 
     <figure class="image-column">
+		 <figcaption> <p>picure by Reyyan</p></figcaption>
       <img class="single-image" src="pictures /pexels-reyyan-505450018-30877288.jpg" alt="picures by reyyan	">
       <figcaption class="single-image-caption">Trade and early settlements shaped Oman’s beginnings.</figcaption>
       
@@ -76,6 +78,7 @@
   <!-- Section 3 — Islamic Era -->
   <section class="two-column-section">
     <figure class="image-column-left">
+		 <figcaption> <p>picure by Saud Aloufi</p></figcaption>
       <img class="single-image" src="pictures /pexels-saud-aloufi-1576572527-27307136.jpg" alt="picures by saud aloufi	">
       <figcaption class="single-image-caption">
         The Islamic era introduced new traditions and culture.
@@ -92,6 +95,7 @@
   <!-- Section 5 — Modern Oman -->
   <section class="two-column-section">
     <figure class="image-column-left">
+		 <figcaption> <p>picure by Marybellphoto	</p></figcaption>
       <img class="single-image" src="pictures /modernpexels-marybellphoto-27024465.jpg" alt="picures by marybellphoto	">
       <figcaption class="single-image-caption">
         Tradition and progress in harmony.
