--- a/destination.html
+++ b/destination.html
@@ -117,7 +117,8 @@ window.onload = () => {
 
         <div class="dots"></div>
       </div>
-      <figcaption>Explore the vibrant capital city of Muscat.</figcaption>
+      <figcaption>pictures by Reyyan,Khalid Belhaji,Karen Avery </figcaption>
+      <figcaption><h2>Explore the vibrant capital city of Muscat.</h2></figcaption>
     </div>
 
     <div class="destination-info">
