--- a/destination.html
+++ b/destination.html
@@ -150,7 +150,9 @@ window.onload = () => {
 
         <div class="dots"></div>
       </div>
-      <figcaption>Experience Oman's cultural heart in Nizwa.</figcaption>
+      
+      <figcaption>pictures by Reyyan,Smitesh Parekh </figcaption>
+      <figcaption><h3>Experience Oman's cultural heart in Nizwa.</h3></figcaption>
     </div>
   </section>
 
@@ -169,7 +171,8 @@ window.onload = () => {
 
         <div class="dots"></div>
       </div>
-      <figcaption>Feel the vast golden dunes of Wahiba Sands.</figcaption>
+            <figcaption>pictures by Reyyan,Vincent Ma Janssen </figcaption>
+      <figcaption><h3>Feel the vast golden dunes of Wahiba Sands.</h3></figcaption>
     </div>
 
     <div class="destination-info">
