--- a/thingstodo.html
+++ b/thingstodo.html
@@ -71,6 +71,7 @@
 
   <section class="two-column-section">
     <figure class="image-column-left">
+        <figcaption> <p>picture by Saad Alawi</p></figcaption>
       <img class="square-image" src="pictures /pexels-saad-alawi-123396395-10010324.jpg" alt="picture by Saad Alawi">
       <figcaption class="square-image-caption">Explore Oman's top attractions and activities.</figcaption>
     </figure>
