Update about .html

--- a/about .html
+++ b/about .html
@@ -60,7 +60,7 @@
         src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
         alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
       <figcaption class="single-image-caption">
-        Exploring Oman through culture, geography, and travel experiences.
+        <h3>Exploring Oman through culture, geography, and travel experiences.</h3>
       </figcaption>
     </figure>
     
@@ -75,7 +75,7 @@
         src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
         alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
       <figcaption class="single-image-caption">
-        Natural landscapes that influenced the site’s visual direction.
+        <h3>Natural landscapes that influenced the site’s visual direction.</h3>
       </figcaption>
     </figure>
 
