--- a/culture.html
+++ b/culture.html
@@ -56,7 +56,7 @@
         src="pictures /pexels-kenza-benaouda-29106256-35112608.jpg" 
         alt="picture by Kenza Benaouda showing traditional Omani cultural elements">
       <figcaption class="single-image-caption">
-        Experience the rich cultural heritage of Oman.
+        <h3>Experience the rich cultural heritage of Oman.</h3>
       </figcaption>
     </figure>
   </section>
