--- a/geography.html
+++ b/geography.html
@@ -49,7 +49,7 @@
 	    <figcaption> <p>picture by Reyyan</p></figcaption>
     <img class="single-image" src="pictures /pexels-reyyan-505450018-31254200.jpg" alt="picture by reyyan">
     <figcaption class="single-image-caption">
-      From desert dunes to coastlines — Oman’s varied landscapes.
+      <h3>>From desert dunes to coastlines — Oman’s varied landscapes.</h3
     </figcaption>
   </figure>
 
@@ -69,7 +69,7 @@
   <figure class="image-column">
 	  <figcaption> <p>picture by eslames1</p></figcaption>
     <img class="single-image" src="pictures /pexels-eslames1-34919507.jpg" alt="picture by eslames1">
-    <figcaption class="single-image-caption">The rugged Hajar Mountains shape northern Oman’s climate and culture.</figcaption>
+    <figcaption class="single-image-caption"><h3>The rugged Hajar Mountains shape northern Oman’s climate and culture.</h3></figcaption>
   </figure>
 </section>
 
@@ -79,7 +79,7 @@
 	    <figcaption> <p>picture by Reyyan</p></figcaption>
     <img class="single-image" src="pictures /pexels-reyyan-505450018-30785939.jpg" alt="picture by reyyan">
     <figcaption class="single-image-caption">
-      The golden dunes of Wahiba Sands in central Oman.
+     <h3>The golden dunes of Wahiba Sands in central Oman.</h3> 
     </figcaption>
   </figure>
 
