--- a/history.html
+++ b/history.html
@@ -49,7 +49,7 @@
 		 <figcaption> <p>picure by Reyyan</p></figcaption>
       <img class="single-image" src="pictures /history1pexels-reyyan-505450018-30785924.jpg" alt="picures by reyyan	">
       <figcaption class="single-image-caption">
-        Stunning Fort Architecture in Oman
+        <h3>Stunning Fort Architecture in Oman</h3>
       </figcaption>
     </figure>
 <div class="scroll-text">Scroll</div>
@@ -69,7 +69,7 @@
     <figure class="image-column">
 		 <figcaption> <p>picure by Reyyan</p></figcaption>
       <img class="single-image" src="pictures /pexels-reyyan-505450018-30877288.jpg" alt="picures by reyyan	">
-      <figcaption class="single-image-caption">Trade and early settlements shaped Oman’s beginnings.</figcaption>
+      <figcaption class="single-image-caption"><h3>Trade and early settlements shaped Oman’s beginnings.</h3></figcaption>
       
     </figure>
    
@@ -81,7 +81,7 @@
 		 <figcaption> <p>picure by Saud Aloufi</p></figcaption>
       <img class="single-image" src="pictures /pexels-saud-aloufi-1576572527-27307136.jpg" alt="picures by saud aloufi	">
       <figcaption class="single-image-caption">
-        The Islamic era introduced new traditions and culture.
+        <h3>The Islamic era introduced new traditions and culture.</h3>
       </figcaption>
     </figure>
 
@@ -98,7 +98,7 @@
 		 <figcaption> <p>picure by Marybellphoto	</p></figcaption>
       <img class="single-image" src="pictures /modernpexels-marybellphoto-27024465.jpg" alt="picures by marybellphoto	">
       <figcaption class="single-image-caption">
-        Tradition and progress in harmony.
+       <h3> Tradition and progress in harmony.</h3>
       </figcaption>
     </figure>
 
