--- a/thingstodo.html
+++ b/thingstodo.html
@@ -45,7 +45,7 @@
     <figure class="image-column-left">
        <figcaption> <p>picture by Ema Mohammed</p></figcaption>
       <img class="square-image" src="pictures /pexels-ema-mohammed-1617422-3101780.jpg" alt="picture by Ema Mohammed">
-      <figcaption class="square-image-caption">Explore Oman's top attractions and activities.</figcaption>
+      <figcaption class="square-image-caption"><h3>Explore Oman's top attractions and activities.</h3></figcaption>
     </figure>
     <div class="scroll-text">Scroll</div>
     <div class="text-column-right">
@@ -65,7 +65,7 @@
     <figure class="image-column">
         <figcaption> <p>picture by Mihir</p></figcaption>
       <img class="single-image" src="pictures /pexels-mihirs1970-33516570.jpg" alt="picture by Mihir S1970">
-      <figcaption class="single-image-caption">Experience authentic Omani traditions and hospitality.</figcaption>
+      <figcaption class="single-image-caption"><h3>Experience authentic Omani traditions and hospitality.</h3></figcaption>
     </figure>
   </section>
 
@@ -73,7 +73,7 @@
     <figure class="image-column-left">
         <figcaption> <p>picture by Saad Alawi</p></figcaption>
       <img class="square-image" src="pictures /pexels-saad-alawi-123396395-10010324.jpg" alt="picture by Saad Alawi">
-      <figcaption class="square-image-caption">Explore Oman's top attractions and activities.</figcaption>
+      <figcaption class="square-image-caption"><h3>Explore Oman's top attractions and activities.</h3></figcaption>
     </figure>
     <div class="text-column-right">
       <h2>Discover Amazing Experiences</h2>
