--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
 		<ul class="nav-links" id="primary-navigation-geo" role="menubar" aria-hidden="true">
        <li role="none"><a role="menuitem" href="about .html">About</a></li>
 			<li role="none"><a role="menuitem" href="index.html">Home</a></li>
-			<li role="none"><a role="menuitem" href="thingstodo.hml">Things to Do</a></li>
+			<li role="none"><a role="menuitem" href="thingstodo.html">Things to Do</a></li>
 			<li role="none"><a role="menuitem" href="destination.html">Destinations</a></li>
 			<li role="none"><a role="menuitem" href="contact.html">Contact</a></li>
 		</ul>
