Update about .html

--- a/about .html
+++ b/about .html
@@ -58,7 +58,7 @@
       <img
         class="single-image"
         src="pictures /pexels-saad-alawi-123396395-29285014.jpg"
-        alt="Picture by Saad Alawi showing a collage of Oman's culture, geography, and travel scenes">
+        alt="Picture by Saad Alawi showing a flag of Oman">
       <figcaption class="single-image-caption">
         <h3>Exploring Oman through culture, geography, and travel experiences.</h3>
       </figcaption>
@@ -73,7 +73,7 @@
       <img
         class="single-image"
         src="pictures /pexels-sudhakaran-puthiyedath-155869790-10998247.jpg"
-        alt="picture by Sudhakaran Puthiyedath showing natural landscapes in Oman">
+        alt="picture by Sudhakaran Puthiyedath showing natural landscapes and buildings in Oman">
       <figcaption class="single-image-caption">
         <h3>Natural landscapes that influenced the site’s visual direction.</h3>
       </figcaption>
