--- a/culture.html
+++ b/culture.html
@@ -54,7 +54,7 @@
       <img 
         class="single-image" 
         src="pictures /pexels-kenza-benaouda-29106256-35112608.jpg" 
-        alt="picture by Kenza Benaouda showing traditional Omani cultural elements">
+        alt="picture by Kenza Benaouda showing traditional Omani cultural attire and people">
       <figcaption class="single-image-caption">
         <h3>Experience the rich cultural heritage of Oman.</h3>
       </figcaption>
