--- a/destination.html
+++ b/destination.html
@@ -107,9 +107,9 @@ window.onload = () => {
     <div class="destination-image">
       <div class="carousel modern" id="carousel-muscat">
         <div class="slides">
-          <img src="pictures /pexels-reyyan-505450018-30982828.jpg" alt="picture by">
-          <img src="pictures /pexels-khalid-belhaji-2150666179-31867547.jpg" alt="picture by Khalid Belhaji">
-          <img src="pictures /pexels-karen-avery-774852971-28718669.jpg" alt="picture by Karen Avery">
+          <img src="pictures /pexels-reyyan-505450018-30982828.jpg" alt="picture by Reyyan  white Omani mosque">
+          <img src="pictures /pexels-khalid-belhaji-2150666179-31867547.jpg" alt="picture by Khalid Belhaji son and dad on bycicle ">
+          <img src="pictures /pexels-karen-avery-774852971-28718669.jpg" alt="picture by Karen Avery central mosque ">
         </div>
 
         <button class="nav prev" onclick="prevSlide('carousel-muscat')">❮</button>
@@ -140,9 +140,9 @@ window.onload = () => {
     <div class="destination-image">
       <div class="carousel modern" id="carousel-nizwa">
         <div class="slides">
-          <img src="pictures /pexels-reyyan-505450018-30831424.jpg" alt="picture by Reyyan">
-          <img src="pictures /pexels-reyyan-505450018-30815255.jpg" alt="picture by Reyyan">
-          <img src="pictures /pexels-smitesh-parekh-3244931-34376621.jpg" alt="picture by Smitesh Parekh">
+          <img src="pictures /pexels-reyyan-505450018-30831424.jpg" alt="picture by Reyyan pots near wall">
+          <img src="pictures /pexels-reyyan-505450018-30815255.jpg" alt="picture by Reyyan old city">
+          <img src="pictures /pexels-smitesh-parekh-3244931-34376621.jpg" alt="picture by Smitesh Parekh Omani port">
         </div>
 
         <button class="nav prev" onclick="prevSlide('carousel-nizwa')">❮</button>
@@ -161,9 +161,9 @@ window.onload = () => {
     <div class="destination-image">
       <div class="carousel modern" id="carousel-wahiba">
         <div class="slides">
-          <img src="pictures /pexels-reyyan-505450018-30815255.jpg" alt="picture by Reyyan">
-          <img src="pictures /pexels-reyyan-505450018-30891651.jpg" alt="picture by Reyyan">
-          <img src="pictures /pexels-vincent-ma-janssen-19786030.jpg" alt="picture by Vincent Ma Janssen">
+          <img src="pictures /pexels-reyyan-505450018-30815255.jpg" alt="picture by Reyyan old city">
+          <img src="pictures /pexels-reyyan-505450018-30891651.jpg" alt="picture by Reyyan desert - wahiba sands">
+          <img src="pictures /pexels-vincent-ma-janssen-19786030.jpg" alt="picture by Vincent Ma Janssen desert wahiba sands">
         </div>
 
         <button class="nav prev" onclick="prevSlide('carousel-wahiba')">❮</button>
