--- a/geography.html
+++ b/geography.html
@@ -47,7 +47,7 @@
 <section class="two-column-section">
   <figure class="image-column-left">
 	    <figcaption> <p>picture by Reyyan</p></figcaption>
-    <img class="single-image" src="pictures /pexels-reyyan-505450018-31254200.jpg" alt="picture by reyyan">
+    <img class="single-image" src="pictures /pexels-reyyan-505450018-31254200.jpg" alt="picture by Reyyan Flying birds and mountain">
     <figcaption class="single-image-caption">
       <h3>>From desert dunes to coastlines — Oman’s varied landscapes.</h3
     </figcaption>
@@ -77,7 +77,7 @@
 <section class="two-column-section">
   <figure class="image-column-left">
 	    <figcaption> <p>picture by Reyyan</p></figcaption>
-    <img class="single-image" src="pictures /pexels-reyyan-505450018-30785939.jpg" alt="picture by reyyan">
+    <img class="single-image" src="pictures /pexels-reyyan-505450018-30785939.jpg" alt="picture by reyyan car on the beach">
     <figcaption class="single-image-caption">
      <h3>The golden dunes of Wahiba Sands in central Oman.</h3> 
     </figcaption>
