--- a/history.html
+++ b/history.html
@@ -47,7 +47,7 @@
   <section class="two-column-section">
     <figure class="image-column-left">
 		 <figcaption> <p>picure by Reyyan</p></figcaption>
-      <img class="single-image" src="pictures /history1pexels-reyyan-505450018-30785924.jpg" alt="picures by reyyan	">
+      <img class="single-image" src="pictures /history1pexels-reyyan-505450018-30785924.jpg" alt="picures by reyyan Fort Architecture in Oman	">
       <figcaption class="single-image-caption">
         <h3>Stunning Fort Architecture in Oman</h3>
       </figcaption>
@@ -68,7 +68,7 @@
 
     <figure class="image-column">
 		 <figcaption> <p>picure by Reyyan</p></figcaption>
-      <img class="single-image" src="pictures /pexels-reyyan-505450018-30877288.jpg" alt="picures by reyyan	">
+      <img class="single-image" src="pictures /pexels-reyyan-505450018-30877288.jpg" alt="picures by reyyan	Omani men in the building">
       <figcaption class="single-image-caption"><h3>Trade and early settlements shaped Oman’s beginnings.</h3></figcaption>
       
     </figure>
@@ -79,7 +79,7 @@
   <section class="two-column-section">
     <figure class="image-column-left">
 		 <figcaption> <p>picure by Saud Aloufi</p></figcaption>
-      <img class="single-image" src="pictures /pexels-saud-aloufi-1576572527-27307136.jpg" alt="picures by saud aloufi	">
+      <img class="single-image" src="pictures /pexels-saud-aloufi-1576572527-27307136.jpg" alt="picures by saud aloufi central mosque of Oman	">
       <figcaption class="single-image-caption">
         <h3>The Islamic era introduced new traditions and culture.</h3>
       </figcaption>
@@ -96,7 +96,7 @@
   <section class="two-column-section">
     <figure class="image-column-left">
 		 <figcaption> <p>picure by Marybellphoto	</p></figcaption>
-      <img class="single-image" src="pictures /modernpexels-marybellphoto-27024465.jpg" alt="picures by marybellphoto	">
+      <img class="single-image" src="pictures /modernpexels-marybellphoto-27024465.jpg" alt="picures by marybellphoto traditional Omani hats	">
       <figcaption class="single-image-caption">
        <h3> Tradition and progress in harmony.</h3>
       </figcaption>
