--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="card-container">
     <div class="card">
        <figure>
-      <img src="pictures /history cardpexels-christine cleireny-19840387.jpg" alt="picture by Christine Cleireny">
+      <img src="pictures /history cardpexels-christine cleireny-19840387.jpg" alt="picture by Christine Cleireny old buildings">
          <figcaption>picture by Christine Cleireny</figcaption>
          </figure>
       <h3>History</h3>
@@ -47,7 +47,7 @@
     </div>
     <div class="card">
         <figure>
-      <img src="pictures /pexels-beytlik-7522157.jpg" alt="picture by Beytlik Photography">
+      <img src="pictures /pexels-beytlik-7522157.jpg" alt="picture by Beytlik Photography ceiling of mosque">
             <figcaption>picture by Beytlik Photography</figcaption>
         </figure>
       <h3>Culture</h3>
@@ -56,7 +56,7 @@
     </div>
     <div class="card">
         <figure>
-      <img src="pictures /landscapescradpexels-ahmed-al-khamisi-2531057-9674297.jpg" alt="picture by Ahmed Al-Khamisi">
+      <img src="pictures /landscapescradpexels-ahmed-al-khamisi-2531057-9674297.jpg" alt="picture by Ahmed Al-Khamisi ruins in the jungle ">
              <figcaption>picture by Ahmed Al-Khamisi</figcaption>
         </figure>
       <h3>Geography</h3>
