--- a/thingstodo.html
+++ b/thingstodo.html
@@ -42,7 +42,7 @@
   <section class="two-column-section">
     <figure class="image-column-left">
        <figcaption> <p>picture by Ema Mohammed</p></figcaption>
-      <img class="square-image" src="pictures /pexels-ema-mohammed-1617422-3101780.jpg" alt="picture by Ema Mohammed">
+      <img class="square-image" src="pictures /pexels-ema-mohammed-1617422-3101780.jpg" alt="picture by Ema Mohammed cake and coffe on the table ">
       <figcaption class="square-image-caption"><h3>Explore Oman's top attractions and activities.</h3></figcaption>
     </figure>
     <div class="scroll-text">Scroll</div>
@@ -62,7 +62,7 @@
     </div>
     <figure class="image-column">
         <figcaption> <p>picture by Mihir</p></figcaption>
-      <img class="single-image" src="pictures /pexels-mihirs1970-33516570.jpg" alt="picture by Mihir S1970">
+      <img class="single-image" src="pictures /pexels-mihirs1970-33516570.jpg" alt="picture by Mihir S1970 Beach">
       <figcaption class="single-image-caption"><h3>Experience authentic Omani traditions and hospitality.</h3></figcaption>
     </figure>
   </section>
@@ -70,7 +70,7 @@
   <section class="two-column-section">
     <figure class="image-column-left">
         <figcaption> <p>picture by Saad Alawi</p></figcaption>
-      <img class="square-image" src="pictures /pexels-saad-alawi-123396395-10010324.jpg" alt="picture by Saad Alawi">
+      <img class="square-image" src="pictures /pexels-saad-alawi-123396395-10010324.jpg" alt="picture by Saad Alawi car near mountains">
       <figcaption class="square-image-caption"><h3>Explore Oman's top attractions and activities.</h3></figcaption>
     </figure>
     <div class="text-column-right">
